test/good/generics/placeholder01.px

func f(a, _, _) def
    _ = a
    g = _
    return g(a)

print f(1, 2, 3)
