test/bad/tuples/tuple04.px

a = (2, true)
a = (false, 3)
